--- a/Example/YYCacheSwift.xcodeproj/xcshareddata/xcschemes/Example_iOS.xcscheme
+++ b/Example/YYCacheSwift.xcodeproj/xcshareddata/xcschemes/Example_iOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0900"
+   LastUpgradeVersion = "1150"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-               BuildableName = "YYCacheSwift_Example.app"
-               BlueprintName = "YYCacheSwift_Example"
+               BuildableName = "Example_iOS.app"
+               BlueprintName = "Example_iOS"
                ReferencedContainer = "container:YYCacheSwift.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -40,8 +40,16 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "607FACCF1AFB9204008FA782"
+            BuildableName = "Example_iOS.app"
+            BlueprintName = "Example_iOS"
+            ReferencedContainer = "container:YYCacheSwift.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -54,23 +62,11 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "YYCacheSwift_Example.app"
-            BlueprintName = "YYCacheSwift_Example"
-            ReferencedContainer = "container:YYCacheSwift.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -82,13 +78,11 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "YYCacheSwift_Example.app"
-            BlueprintName = "YYCacheSwift_Example"
+            BuildableName = "Example_iOS.app"
+            BlueprintName = "Example_iOS"
             ReferencedContainer = "container:YYCacheSwift.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -101,8 +95,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "YYCacheSwift_Example.app"
-            BlueprintName = "YYCacheSwift_Example"
+            BuildableName = "Example_iOS.app"
+            BlueprintName = "Example_iOS"
             ReferencedContainer = "container:YYCacheSwift.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
